cluster/apps/networking/traefik/app/proxies/garage.yaml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: garage-proxy
  namespace: networking
subsets:
  - addresses:
      - ip: 10.0.0.25
    ports:
      - name: http
        port: 30188
      - name: console
        port: 30186
---
kind: Service
apiVersion: v1
metadata:
  name: garage-proxy
  namespace: networking
spec:
  ports:
    - name: http
      protocol: TCP
      port: 30188
      targetPort: 30188
    - name: console
      protocol: TCP
      port: 30186
      targetPort: 30186
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-proxy
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "Garage"
    hajimari.io/enable: "true"
    hajimari.io/icon: "server"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/service.serversscheme: "http"
    external-dns/internal: "true"
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - "*.garage.${SECRET_LAB_DOMAIN}"
        - "garage.${SECRET_LAB_DOMAIN}"
      secretName: "garage-${SECRET_LAB_DOMAIN/./-}-tls"
  rules:
    - host: "garage.${SECRET_LAB_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-proxy
                port:
                  name: http
    - host: "*.garage.${SECRET_LAB_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-proxy
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-console
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/service.serversscheme: "http"
    traefik.ingress.kubernetes.io/router.priority: "100"
    external-dns/internal: "true"
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - "console.garage.${SECRET_LAB_DOMAIN}"
      secretName: "garage-${SECRET_LAB_DOMAIN/./-}-tls"
  rules:
    - host: "console.garage.${SECRET_LAB_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-proxy
                port:
                  name: console
