cluster/apps/networking/traefik/app/proxies/home-assistant.yaml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: home-assistant-proxy
  namespace: networking
subsets:
  - addresses:
      - ip: 10.0.10.47
    ports:
      - name: http
        port: 8123
---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant-proxy
  namespace: networking
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
---
kind: Service
apiVersion: v1
metadata:
  name: whoami
  namespace: networking
spec:
  type: ExternalName
  externalName: whoami.default.svc.cluster.local
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-proxy-alexa
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns/external: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "hass.${SECRET_LAB_DOMAIN}"
      secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
  rules:
    - host: "hass.${SECRET_LAB_DOMAIN}"
      http:
        paths:
          - path: /api/alexa/smart_home
            pathType: Prefix
            backend:
              service:
                name: home-assistant-proxy
                port:
                  number: 8123
          - path: /auth/token
            pathType: Prefix
            backend:
              service:
                name: home-assistant-proxy
                port:
                  number: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-proxy
  namespace: networking
  annotations:
    hajimari.io/appName: "Home Assistant"
    hajimari.io/enable: "true"
    hajimari.io/icon: "home-assistant"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns/external: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "hass.${SECRET_LAB_DOMAIN}"
      secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
  rules:
    - host: "hass.${SECRET_LAB_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-proxy
                port:
                  number: 8123
