cluster/apps/networking/traefik/app/proxies/minio.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: minio
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ExternalName
  externalName: glacier.lab.${SECRET_LAB_DOMAIN}
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9002
      targetPort: 9002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflarewarp@kubernetescrd"
    # traefik.ingress.kubernetes.io/router.middlewares: "minio-console-stripprefix@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - s3.${SECRET_LAB_DOMAIN}
        - "*.s3.${SECRET_LAB_DOMAIN}"
        - console.s3.${SECRET_LAB_DOMAIN}
  rules:
    - host: s3.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: console.s3.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9002
    - host: "*.s3.${SECRET_LAB_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
